Add menu styling to 5 pages

--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
     <title>Web Governance Demo</title>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- End of Stylesheet -->
 </head>
 <body>
     <!-- Start of header -->
-    <header>
-        <nav role="navigation" class="main-nav nav">
-            <ul>
-                <li class="nav-item"><a href="#">Menu item 1</a></li>
-                <li class="nav-item"><a href="#_2">Menu item 2</a></li>
-                <li class="nav-item"><a href="#_3">Menu item 3</a></li>
-                <li class="nav-item"><a href="#_4">Menu item 4</a></li>
-                <li class="nav-item"><a href="#_4">Menu item 5</a></li>
-            </ul>
-        </nav>
+    <header id="demo-header" class="monsido-demo-nav">
+        <div class="container">
+            <nav role="navigation" class="main-nav nav">
+                <ul>
+                    <li class="nav-item"><a href="./quality_assurance.html">Quality Assurance</a></li>
+                    <li class="nav-item"><a href="./web_acc_page_1.html">Web Accessibility</a></li>
+                    <li class="nav-item"><a href="./on_page_seo.html">On Page SEO</a></li>
+                    <li class="nav-item"><a href="./performance.html">Performance</a></li>
+                    <li class="nav-item"><a href="./data_privacy.html">Data Privacy</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <!-- End of header -->
 
@@ -34,5 +36,20 @@
             <p>Check pages before and after SEO recommdations have been applied to improve the SEO performance of pages.</p>
         </section>
     </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>Footer</p>
+                <nav role="navigation" class="footer-nav nav">
+                  <ul>
+                      <li class="nav-item"><a href="./quality_assurance.html">Quality Assurance</a></li>
+                      <li class="nav-item"><a href="./web_acc_page_1.html">Web Accessibility</a></li>
+                      <li class="nav-item"><a href="./on_page_seo.html">On Page SEO</a></li>
+                      <li class="nav-item"><a href="./performance.html">Performance</a></li>
+                      <li class="nav-item"><a href="./data_privacy.html">Data Privacy</a></li>
+                  </ul>
+              </nav>
+      </footer>
+      <!-- End of footer -->
 </body>
 </html>
