Add Policies page

--- a/data_privacy.html
+++ b/data_privacy.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Governance Demo</title>
 
-    <!-- Stylesheet -->
+    <!-- Stylesheet and Favicon-->
     <link rel="stylesheet" href="./css/style.css">
-    <!-- End of Stylesheet -->
+    <link rel="icon" type="image/x-icon" href="./images/favicon_io/favicon.ico">
+    <!-- End of Stylesheet and Favicon -->
 </head>
 <body>
     <!-- Start of header -->
@@ -16,7 +17,9 @@
         <div class="container">
             <nav role="navigation" class="main-nav nav">
                 <ul>
+                    <li class="nav-item"><a href="/">Home</a></li>
                     <li class="nav-item"><a href="./quality_assurance.html">Quality Assurance</a></li>
+                    <li class="nav-item"><a href="./policies.html">Policies</a></li>
                     <li class="nav-item"><a href="./web_acc_page_1.html">Web Accessibility</a></li>
                     <li class="nav-item"><a href="./on_page_seo.html">On Page SEO</a></li>
                     <li class="nav-item"><a href="./performance.html">Performance</a></li>
