--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Governance Demo</title>
 
-    <!-- Stylesheet -->
+    <!-- Stylesheet and Favicon-->
     <link rel="stylesheet" href="./css/style.css">
-    <!-- End of Stylesheet -->
+    <link rel="icon" type="image/x-icon" href="./images/favicon_io/favicon.ico">
+    <!-- End of Stylesheet and Favicon -->
 </head>
 <body>
     <!-- Start of header -->
@@ -16,7 +17,9 @@
         <div class="container">
             <nav role="navigation" class="main-nav nav">
                 <ul>
+                    <li class="nav-item"><a href="/">Home</a></li>
                     <li class="nav-item"><a href="./quality_assurance.html">Quality Assurance</a></li>
+                    <li class="nav-item"><a href="./policies.html">Policies</a></li>
                     <li class="nav-item"><a href="./web_acc_page_1.html">Web Accessibility</a></li>
                     <li class="nav-item"><a href="./on_page_seo.html">On Page SEO</a></li>
                     <li class="nav-item"><a href="./performance.html">Performance</a></li>
@@ -29,7 +32,7 @@
 
     <main class="main">
         <section class="welcome">
-            <h1>Welcome to the Web Governance Demo Site</h1>
+            <h1><img src="./images/monsido-logo.png" alt="Monsido Logo" class="icons">Welcome to the Web Governance Demo Site</h1>
             <h2>Use the navigation to find pages with before and after code examples</h2>
             <p>This site will serve as a demo page to show Monsido's powerful web governance tools.</p>
             <p>Find pages with videos showing how screenreaders read out the content of pages that fail WCAG 2.1 A and AA criteria.</p>
@@ -39,7 +42,6 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>Footer</p>
                 <nav role="navigation" class="footer-nav nav">
                   <ul>
                       <li class="nav-item"><a href="./quality_assurance.html">Quality Assurance</a></li>
