--- a/web_acc_page_1.html
+++ b/web_acc_page_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Governance Demo - Web Accessibility</title>
+    <title>Web Accessibility</title>
 
     <!-- Stylesheet and Favicon-->
     <link rel="stylesheet" href="./css/style.css">
@@ -32,7 +32,7 @@
 
     <main class="main">
         <section class="welcome">
-            <h1><img src="./images/Accessibility.svg" alt="Web Accesssibility by Monsido" class="icons">Web Governance Demo - Web Accessibility</h1>
+            <h1><img src="./images/Accessibility.svg" alt="Web Accesssibility by Monsido" class="icons">Web Accessibility Demo</h1>
             <h2>Use the navigation to find pages with before and after code examples</h2>
             <hr class="section-divider"><p>This site will serve as a demo page to show Monsido's powerful web governance tools.</p>
             <p>Find pages with videos showing how screenreaders read out the content of pages that fail WCAG 2.1 A and AA criteria.</p>
@@ -47,6 +47,7 @@
               <li class="nav-item"><a href="./on_page_seo.html">On Page SEO</a></li>
               <li class="nav-item"><a href="./performance.html">Performance</a></li>
               <li class="nav-item"><a href="./data_privacy.html">Data Privacy</a></li>
+              <li class="nav-item"><a href="./acc_statement.html">Accessibility Statement</a></li>
           </ul>
       </nav>
 </footer>
