--- a/data_privacy.html
+++ b/data_privacy.html
@@ -32,7 +32,7 @@
 
     <main class="main">
         <section class="welcome">
-            <h1><img src="./images/data-privacy.svg" alt="Monsido Data Privacy" class="icons">Web Governance - Data Privacy</h1>
+            <h1><img src="./images/data-privacy.svg" alt="Monsido Data Privacy" class="icons">Data Privacy Demo</h1>
             <h2>Use the navigation to find pages with before and after code examples</h2>
             <hr class="section-divider"><p>This site will serve as a demo page to show Monsido's powerful web governance tools.</p>
             <p>Find pages with videos showing how screenreaders read out the content of pages that fail WCAG 2.1 A and AA criteria.</p>
