--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
         <div class="container">
             <nav role="navigation" class="main-nav nav">
                 <ul>
-                    <li class="nav-item"><a href="/">Home</a></li>
+                    <li class="nav-item"><a href="./">Home</a></li>
                     <li class="nav-item"><a href="./quality_assurance.html">Quality Assurance</a></li>
                     <li class="nav-item"><a href="./policies.html">Policies</a></li>
                     <li class="nav-item"><a href="./web_acc_page_1.html">Web Accessibility</a></li>
                     <li class="nav-item"><a href="./on_page_seo.html">On Page SEO</a></li>
                     <li class="nav-item"><a href="./performance.html">Performance</a></li>
                     <li class="nav-item"><a href="./data_privacy.html">Data Privacy</a></li>
+                    <li class="nav-item"><a href="./acc_statement.html">Accessibility Statement</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,8 +33,9 @@
 
     <main class="main">
         <section class="welcome">
-            <h1><img src="./images/monsido-logo.png" alt="Monsido Logo" class="icons">Welcome to the Web Governance Demo Site</h1>
+            <h1><img src="./images/monsido-logo.png" alt="Monsido Logo" class="icons monsido-icon">Welcome to the Web Governance Demo Site</h1>
             <h2>Use the navigation to find pages with before and after code examples</h2>
+            <hr class="section-divider">
             <p>This site will serve as a demo page to show Monsido's powerful web governance tools.</p>
             <p>Find pages with videos showing how screenreaders read out the content of pages that fail WCAG 2.1 A and AA criteria.</p>
             <p>Check pages before and after SEO recommdations have been applied to improve the SEO performance of pages.</p>
@@ -49,6 +51,7 @@
                       <li class="nav-item"><a href="./on_page_seo.html">On Page SEO</a></li>
                       <li class="nav-item"><a href="./performance.html">Performance</a></li>
                       <li class="nav-item"><a href="./data_privacy.html">Data Privacy</a></li>
+                      <li class="nav-item"><a href="./acc_statement.html">Accessibility Statement</a></li>
                   </ul>
               </nav>
       </footer>
