--- a/on_page_seo.html
+++ b/on_page_seo.html
@@ -17,7 +17,7 @@
         <div class="container">
             <nav role="navigation" class="main-nav nav">
                 <ul>
-                    <li class="nav-item"><a href="/">Home</a></li>
+                    <li class="nav-item"><a href="./">Home</a></li>
                     <li class="nav-item"><a href="./quality_assurance.html">Quality Assurance</a></li>
                     <li class="nav-item"><a href="./policies.html">Policies</a></li>
                     <li class="nav-item"><a href="./web_acc_page_1.html">Web Accessibility</a></li>
@@ -32,7 +32,7 @@
 
     <main class="main">
         <section class="welcome">
-            <h1><img src="./images/SEO-Audit.svg" alt="Monsido On Page SEO Audit" class="icons">Web Governance Demo - On Page SEO Audit</h1>
+            <h1><img src="./images/SEO-Audit.svg" alt="Monsido On Page SEO Audit" class="icons">On Page SEO Audit Demo</h1>
             <h2>Use the navigation to find pages with before and after code examples</h2>
             <hr class="section-divider"><p>This site will serve as a demo page to show Monsido's powerful web governance tools.</p>
             <p>Find pages with videos showing how screenreaders read out the content of pages that fail WCAG 2.1 A and AA criteria.</p>
@@ -47,6 +47,7 @@
               <li class="nav-item"><a href="./on_page_seo.html">On Page SEO</a></li>
               <li class="nav-item"><a href="./performance.html">Performance</a></li>
               <li class="nav-item"><a href="./data_privacy.html">Data Privacy</a></li>
+              <li class="nav-item"><a href="./acc_statement.html">Accessibility Statement</a></li>
           </ul>
       </nav>
 </footer>
