--- a/quality_assurance.html
+++ b/quality_assurance.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Governance Demo - Quality Assurance</title>
+    <title>Quality Assurance</title>
 
     <!-- Stylesheet and Favicon-->
     <link rel="stylesheet" href="./css/style.css">
@@ -17,7 +17,7 @@
         <div class="container">
             <nav role="navigation" class="main-nav nav">
                 <ul>
-                    <li class="nav-item"><a href="/">Home</a></li>
+                    <li class="nav-item"><a href="./">Home</a></li>
                     <li class="nav-item"><a href="./quality_assurance.html">Quality Assurance</a></li>
                     <li class="nav-item"><a href="./policies.html">Policies</a></li>
                     <li class="nav-item"><a href="./web_acc_page_1.html">Web Accessibility</a></li>
@@ -32,7 +32,7 @@
 
     <main class="main">
         <section class="welcome">
-            <h1><img src="./images/Quality-Assurance.svg" alt="Monsido Quality Assurance" class="icons">Web Governance Demo - Quality Assurance</h1>
+            <h1><img src="./images/Quality-Assurance.svg" alt="Monsido Quality Assurance" class="icons">Quality Assurance Demo</h1>
             <h2>Find the best ways on how you can prioritise Quality Assurance errors in Monsido.</h2>
             <hr class="section-divider"><p>This site will serve as a demo page to show Monsido's powerful web governance tools.</p>
             <p>Find pages with videos showing how screenreaders read out the content of pages that fail WCAG 2.1 A and AA criteria.</p>
@@ -63,6 +63,7 @@
                       <li class="nav-item"><a href="./on_page_seo.html">On Page SEO</a></li>
                       <li class="nav-item"><a href="./performance.html">Performance</a></li>
                       <li class="nav-item"><a href="./data_privacy.html">Data Privacy</a></li>
+                      <li class="nav-item"><a href="./acc_statement.html">Accessibility Statement</a></li>
                   </ul>
               </nav>
       </footer>
