Mega menu part 1

--- a/data_privacy.html
+++ b/data_privacy.html
@@ -8,8 +8,13 @@
 
     <!-- Stylesheet and Favicon-->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/megamenu.css">
     <link rel="icon" type="image/x-icon" href="./images/favicon_io/favicon.ico">
     <!-- End of Stylesheet and Favicon -->
+
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- End of FontAwesome -->
 </head>
 <body>
     <!-- Start of header -->
