--- a/policies.html
+++ b/policies.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-AU">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Governance Demo - Policies</title>
-
-    <!-- Stylesheet and Favicon-->
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" type="image/x-icon" href="./images/favicon_io/favicon.ico">
-    <!-- End of Stylesheet and Favicon -->
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Web Governance Demo</title>
+    
+        <!-- Stylesheet and Favicon-->
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/megamenu.css">
+        <link rel="icon" type="image/x-icon" href="./images/favicon_io/favicon.ico">
+        <!-- End of Stylesheet and Favicon -->
+    
+        <!-- FontAwesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- End of FontAwesome -->
+    </head>
 <body>
     <!-- Start of header -->
     <header id="demo-header" class="monsido-demo-nav">
