--- a/index.html
+++ b/index.html
@@ -36,15 +36,39 @@
                       <div class="dropdown-content">
                           <div class="row">
                               <div class="column">
-                                  <ul class="menu-list">
-                                      <li><img src="./images/broken-link-chain-svgrepo-com.svg" alt="" class="menu-icons"><a href="#">Broken Links</a></li>
-                                      <li><a href="#">Broken Images</a></li>
-                                  </ul>
+                                <ul class="menu-list">
+                                    <li>
+                                        <img src="./images/broken-link-chain-svgrepo-com.svg" alt="" class="menu-icons">
+                                        <a href="#">Broken Links</a>
+                                        <p class="menu-item-description">
+                                        A broken link is a web-page that can’t be found or accessed by a user, for various reasons. Web servers will often return an error message when a user tries to access a broken link. Broken links are also often known as “dead links” or “link rots.” 
+                                        </p>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="column">
+                                    <div class="menu-list">
+                                        <ul>
+                                        <li><img src="./images/broken-image.svg" alt="" class="menu-icons"><a href="#">Broken Images</a>
+                                        <p class="menu-item-description">First impressions last, and when web visitors see a page with a broken image, they would immediately think that the website is not actively managed. Remove the ugly broken image icons by fixing your broken image URLs</p>
+                                    </li>
+                                    </ul>
+                                  </div>
                               </div>
                               <div class="column">
                                 <ul class="menu-list">
-                                    <li><a href="#">Misspellings</a></li>
-                                    <li><a href="#">Readability</a></li>
+                                    <li>
+                                        <img src="./images/misspellings.svg" alt="" class="menu-icons"><a href="#">Misspellings</a>
+                                        <p class="menu-item-description">A website represents your brand and image. Don't let yourself get caught with misspelled words that can leave a bad impression to your visitors.</p>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="column">
+                                <ul class="menu-list">
+                                    <li>
+                                        <img src="./images/readability.svg" alt="" class="menu-icons"><a href="#">Readability</a>
+                                        <p class="menu-item-description">Write content to engage and inform your audience. Check your readability scores to know if the articles you publish are suited to your audience.</p>
+                                    </li>
                                 </ul>
                             </div>
                           </div>
@@ -62,16 +86,69 @@
                              <div class="row">
                                  <div class="column">
                                      <ul>
-                                         <li><a href="#">Templates</a></li>
-                                         <li><a href="#">Search Types</a></li>
-                                         <li><a href="#">Regular Expressions</a></li>
-                                         <li><a href="#">CSS Selectors</a></li>
+                                         <li><img src="./images/templates.svg" alt="" class="menu-icons"><a href="#">Templates</a>
+                                        <p class="menu-item-description">Check out each rule and use case from our list of commonly searched items to speed up your search process.</p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/search-types.svg" alt="" class="menu-icons"><a href="#">Search Types</a>
+                                        <p class="menu-item-description">Learn what filter type and settings you can use to search your site of content you need to amend, update or delete. </p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/regex.svg" alt="" class="menu-icons"><a href="#">Regular Expressions</a>
+                                        <p class="menu-item-description">Sometimes, regular text searches are not enough to target areas of your site when hunting keywords that don't meet your style guide. See a list of the most common patterns we use to find targetted content.</p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/css.svg" alt="" class="menu-icons"><a href="#">CSS Selectors</a>
+                                        <p class="menu-item-description">Simple search terms can receive a major boost when used with our CSS Selectors. Target specific landmarks of your site to remove false positives in your reports. </p></li>
                                      </ul>
                                  </div>
                              </div>
                          </div>
                     </li>
                     <!-- End of Policies Menu -->
+
+                    <!-- Web Accessibility Menu -->
+                    <li class="nav-item dropdown">
+                        <button class="dropbtn">
+                           <a href="./web_acc_page_1.html">Web Accessibility</a>
+                           <i class="fa fa-caret-down"></i>
+                         </button>
+                         <div class="dropdown-content">
+                             <div class="row">
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/templates.svg" alt="" class="menu-icons"><a href="#">Templates</a>
+                                        <p class="menu-item-description">Check out each rule and use case from our list of commonly searched items to speed up your search process.</p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/search-types.svg" alt="" class="menu-icons"><a href="#">Search Types</a>
+                                        <p class="menu-item-description">Learn what filter type and settings you can use to search your site of content you need to amend, update or delete. </p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/regex.svg" alt="" class="menu-icons"><a href="#">Regular Expressions</a>
+                                        <p class="menu-item-description">Sometimes, regular text searches are not enough to target areas of your site when hunting keywords that don't meet your style guide. See a list of the most common patterns we use to find targetted content.</p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/css.svg" alt="" class="menu-icons"><a href="#">CSS Selectors</a>
+                                        <p class="menu-item-description">Simple search terms can receive a major boost when used with our CSS Selectors. Target specific landmarks of your site to remove false positives in your reports. </p></li>
+                                     </ul>
+                                 </div>
+                             </div>
+                         </div>
+                    </li>
+                    <!-- End of Web Accessibility Menu -->
 
                     <!-- On Page SEO Menu -->
                     <li class="nav-item dropdown">
@@ -83,10 +160,26 @@
                              <div class="row">
                                  <div class="column">
                                      <ul>
-                                         <li><a href="#">Templates</a></li>
-                                         <li><a href="#">Search Types</a></li>
-                                         <li><a href="#">Regular Expressions</a></li>
-                                         <li><a href="#">CSS Selectors</a></li>
+                                         <li><img src="./images/templates.svg" alt="" class="menu-icons"><a href="#">Templates</a>
+                                        <p class="menu-item-description">Check out each rule and use case from our list of commonly searched items to speed up your search process.</p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/search-types.svg" alt="" class="menu-icons"><a href="#">Search Types</a>
+                                        <p class="menu-item-description">Learn what filter type and settings you can use to search your site of content you need to amend, update or delete. </p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/regex.svg" alt="" class="menu-icons"><a href="#">Regular Expressions</a>
+                                        <p class="menu-item-description">Sometimes, regular text searches are not enough to target areas of your site when hunting keywords that don't meet your style guide. See a list of the most common patterns we use to find targetted content.</p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/css.svg" alt="" class="menu-icons"><a href="#">CSS Selectors</a>
+                                        <p class="menu-item-description">Simple search terms can receive a major boost when used with our CSS Selectors. Target specific landmarks of your site to remove false positives in your reports. </p></li>
                                      </ul>
                                  </div>
                              </div>
@@ -104,10 +197,26 @@
                              <div class="row">
                                  <div class="column">
                                      <ul>
-                                         <li><a href="#">Templates</a></li>
-                                         <li><a href="#">Search Types</a></li>
-                                         <li><a href="#">Regular Expressions</a></li>
-                                         <li><a href="#">CSS Selectors</a></li>
+                                         <li><img src="./images/templates.svg" alt="" class="menu-icons"><a href="#">Templates</a>
+                                        <p class="menu-item-description">Check out each rule and use case from our list of commonly searched items to speed up your search process.</p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/search-types.svg" alt="" class="menu-icons"><a href="#">Search Types</a>
+                                        <p class="menu-item-description">Learn what filter type and settings you can use to search your site of content you need to amend, update or delete. </p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/regex.svg" alt="" class="menu-icons"><a href="#">Regular Expressions</a>
+                                        <p class="menu-item-description">Sometimes, regular text searches are not enough to target areas of your site when hunting keywords that don't meet your style guide. See a list of the most common patterns we use to find targetted content.</p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/css.svg" alt="" class="menu-icons"><a href="#">CSS Selectors</a>
+                                        <p class="menu-item-description">Simple search terms can receive a major boost when used with our CSS Selectors. Target specific landmarks of your site to remove false positives in your reports. </p></li>
                                      </ul>
                                  </div>
                              </div>
@@ -125,25 +234,37 @@
                              <div class="row">
                                  <div class="column">
                                      <ul>
-                                         <li><a href="#">Templates</a></li>
-                                         <li><a href="#">Search Types</a></li>
-                                         <li><a href="#">Regular Expressions</a></li>
-                                         <li><a href="#">CSS Selectors</a></li>
+                                         <li><img src="./images/templates.svg" alt="" class="menu-icons"><a href="#">Templates</a>
+                                        <p class="menu-item-description">Check out each rule and use case from our list of commonly searched items to speed up your search process.</p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/search-types.svg" alt="" class="menu-icons"><a href="#">Search Types</a>
+                                        <p class="menu-item-description">Learn what filter type and settings you can use to search your site of content you need to amend, update or delete. </p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/regex.svg" alt="" class="menu-icons"><a href="#">Regular Expressions</a>
+                                        <p class="menu-item-description">Sometimes, regular text searches are not enough to target areas of your site when hunting keywords that don't meet your style guide. See a list of the most common patterns we use to find targetted content.</p></li>
+                                     </ul>
+                                 </div>
+                                 <div class="column">
+                                     <ul>
+                                         <li><img src="./images/css.svg" alt="" class="menu-icons"><a href="#">CSS Selectors</a>
+                                        <p class="menu-item-description">Simple search terms can receive a major boost when used with our CSS Selectors. Target specific landmarks of your site to remove false positives in your reports. </p></li>
                                      </ul>
                                  </div>
                              </div>
                          </div>
                     </li>
-                    <!-- End of Data Privacy Menu -->   
-                    <!-- 
-                    <li class="nav-item dropdown"><button class="droptbn"><span class="fa fa-caret -down"></span></button><a href="./performance.html">Performance</a></li>
-                    <li class="nav-item dropdown"><button class="droptbn"><span class="fa fa-caret -down"></span></button><a href="./data_privacy.html">Data Privacy</a></li>
-                    <li class="nav-item dropdown"><button class="droptbn"><span class="fa fa-caret -down"></span></button><a href="./acc_statement.html">Accessibility Statement</a></li> -->
                 </ul>
             </nav>
         </div>
     </header>
     <!-- End of header -->
+
     <main class="main">
         <section class="welcome">
             <h1><img src="./images/monsido-logo.png" alt="Monsido Logo" class="icons monsido-icon">Welcome to the Web Governance Demo Site</h1>
