--- a/quality_assurance.html
+++ b/quality_assurance.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Governance Demo</title>
+        <title>Quality Assurance</title>
     
         <!-- Stylesheet and Favicon-->
         <link rel="stylesheet" href="./css/style.css">
@@ -273,16 +273,19 @@
             <ul>
                 <h2>Find out how you can use Monsido to ensure your website is 100% free from:</h2>
                 <li>
-                    <p><a href="#">Broken Links</a></p>
+                    <p><a href="https://monsido.com/platform/quality-assurances">Broken Links</a></p>
                 </li>
                 <li>
-                    <p><a href="#">Broken Images</a></p>
+                    <p><a href="https://monsido.com/platform/quality-assurance-page">Broken Images</a></p>
                 </li>
                 <li>
                     <p><a href="#">Misspellings</a></p>
                 </li>
                 <li>
                     <p><a href="#">Potential Misspelling</a></p>
+                </li>
+                <li>
+                    <p><a href="https://monsido.com/blog/content-readability-tips">Readability</a></p>
                 </li>
             </ul>
         </section>
